# ChaosLab-Nonlinear-Dynamics-Explorer

./: .gitignore  README.md  main.py  pyproject.toml
chaos_theory/: __init__.py  analysis.py  api.py  cli.py  data.py  plots.py  report.py  simulation.py  systems.py
chaos_theory/static/: app.js  index.html  styles.css
tests/: test_analysis.py  test_api.py  test_simulation.py
