[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "chaos-theory-lab"
version = "0.1.0"
description = "A modern chaos simulation and analysis toolkit with CLI and web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chaos Theory Lab Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "python-multipart>=0.0.9",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "uvicorn>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[project.scripts]
chaoslab = "chaos_theory.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["chaos_theory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
